implement apotheosis compat